--- a/ndex.html
+++ b/ndex.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<html lang="en">
+<meta charset ="UTF-8"> 
+<meta name="viewport" content="width=device-width, initial scale=1">
+ <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
+
 </head>
 <body>
 
